# gimbricate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: align.cpp  align.hpp  cigar.cpp  cigar.hpp  dna.hpp  exists.cpp  exists.hpp  main.cpp  nodes.cpp  nodes.hpp  paf.cpp  paf.hpp  threads.cpp  threads.hpp
test/: h.gfa
